# python-project-template

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: pyproject.toml
